# glusterfs

./: configure.ac  create_xcube  glusterfs.spec.in  guc  mount_xcube  start_xcube
api/src/: gfapi.aliases  gfapi.map  glfs-fops.c  glfs-handleops.c  glfs-internal.h  glfs-mgmt.c  glfs-resolve.c  glfs.c  glfs.h
cli/src/: cli.c
geo-replication/src/: gsyncd.c
glusterfsd/src/: Makefile.am  glusterfsd-messages.h  glusterfsd-mgmt.c  glusterfsd.c  glusterfsd.h
libglusterfs/src/: call-stub.c  call-stub.h  cluster-syncop.c  cluster-syncop.h  common-utils.c  common-utils.h  ctx.c  default-args.c  default-args.h  defaults.h  dict.c  generator.py  glfs-message-id.h  globals.c  globals.h  glusterfs.h  graph.c  inode.c  inode.h  latency.c  latency.h  logging.c  logging.h  mem-pool.c  mem-pool.h  mem-types.h  stack.h  statedump.c  statedump.h  syncop.c  syncop.h  timer.c  timer.h  tw.c  tw.h  xlator.c  xlator.h
rpc/rpc-lib/src/: rpc-clnt.c  rpc-clnt.h  rpc-transport.c  rpc-transport.h  rpcsvc-common.h  rpcsvc.c  rpcsvc.h
rpc/rpc-transport/rdma/src/: rdma.c
rpc/rpc-transport/socket/src/: socket.c
xlators/cluster/afr/src/: afr-common.c  afr-inode-read.c  afr-inode-write.c  afr-self-heal-common.c  pump.c
xlators/cluster/dht/src/: dht-common.c  dht-helper.c  dht-rebalance.c  tier.c
xlators/cluster/ec/src/: ec-heal.c  ec-inode-read.c  (+1 more)
xlators/features/: Makefile.am
xlators/features/share-reservation/src/: Makefile.am  share-reservation-mem-types.h  share-reservation-messages.h  share-reservation.c  share-reservation.h
xlators/meta/src/: cmdline-file.c  meta-defaults.c
(+37 files in other folders)
